--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/readinglist">Reading List</a>
+            <a href="{{ site.baseurl }}/requests">Requests</a>
           </nav>
         </header>
       </div>
