--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,10 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
 
+  <div class="post">
+    {{ page.tagline }}
+  </div>
+
   <div class="entry">
     {{ content }}
   </div>
