--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,11 @@ layout: default
 
   <h1>{{ page.title }}</h1>
 
-  <div class="entry">
-    {{ content }}
+  <div class="post">
+    {{ page.tagline }}
   </div>
+
+  <!-- <div class="entry">
+    {{ content }}
+  </div> -->
 </article>
