--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,19 +3,16 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
-
-  <div class="post">
-    {{ page.tagline }}
-  </div>
-
-  <div class="entry">
+  <header class="page-header">
+    <p class="page-meta">{{ page.date | date: "%B %e, %Y" }}</p>
+    <h1 class="page-title">{{ page.title }}</h1>
+    {% if page.tagline %}
+    <p class="page-tagline">{{ page.tagline }}</p>
+    {% endif %}
+  </header>
+  <div class="page-body">
     {{ content }}
   </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-
+  <footer class="page-footer">Written on {{ page.date | date: "%B %e, %Y" }}</footer>
   {% include disqus.html %}
 </article>
